--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "coba-web2",
   "version": "0.1.0",
+  "homepage": "https://aquarink.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
